--- a/snake/src/App.css
+++ b/snake/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+body{
+  background: rgb(212, 211, 211);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.grid {
+  width: 200px;
+  height: 200px;
+  border: 1px solid aquamarine;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+}
+
+.grid div {
+  width: 20px;
+  height: 20px;
+
+}
+
+.snake {
+  background: burlywood;
+}
+
+.apple {
+  background: papayawhip;
+  border-radius: 20px;
+}
+
+.popup {
+  background: rgb(32, 31,31);
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  top: 100px;
+  left: 100px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
