--- a/snake/src/App.css
+++ b/snake/src/App.css
@@ -1,11 +1,17 @@
 body{
   background: rgb(212, 211, 211);
+  
+  
 }
-
+.title{
+  display: flex;
+  font-size: 3rem;
+  justify-content: center;
+}
 .grid {
   width: 200px;
   height: 200px;
-  border: 1px solid aquamarine;
+  border: 10px solid aquamarine;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -36,4 +42,12 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 20px;
 }
+
+/* .button {
+  display: flex;
+  align-items: center;
+  
+  align-content: space-around;
+} */
